Added Nightbringer class to spell filter

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -125,6 +125,7 @@
 	"TIDY5E.ClassSorcerer": "Sorcerer",
 	"TIDY5E.ClassWarlock": "Warlock",
 	"TIDY5E.ClassWizard": "Wizard",
+	"TIDY5E.ClassNightbringer": "Nightbringer",
 
 	"TIDY5E.OriginSummaryConfig": "Origin Summary Configuration",
 
